# LinuxApplicationDevelopment2024

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: main.sh
04_Debugging/: Makefile  gdb1  gdb2  range.c  test-2-orig
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protected_unlink.c
07_Environmental/: Makefile.am  configure.ac  repl.c
08_I18n/: Makefile  README  guesser.c  messages_ru.po
08_I18n/po/: ru.po
09_PatchDiff/: Makefile  maze.c  patch1-argv-maze-rooms.patch  patch2-argv-maze-rooms-n-chars.patch  patch3-argv-maze-rooms-n-chars-n-srand.patch
10_LibTesting/: Makefile
10_LibTesting/growbuf/: buf.h
10_LibTesting/tests/: growbuf.checkmk  tests.c
11_Documenting/: Doxyfile.in  Makefile  README.md  guesser.c
11_Documenting/po/: ru.po
12_InstallPackaging/: Doxyfile.in  Makefile.am  README.md  configure.ac  mainpage.dox
12_InstallPackaging/po/: POTFILES.in  ru.po
12_InstallPackaging/src/: Makefile.am  avg.c  calc.c  calc.h
12_InstallPackaging/tests/: Makefile.am  avg_test.checkmk
